# firegex-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-13-firegex-mcp.md
docs/superpowers/specs/: 2026-05-13-firegex-mcp-design.md
src/firegex_mcp/: __init__.py  __main__.py  client.py  config.py  models.py  server.py
src/firegex_mcp/tools/: __init__.py  firewall.py  nfproxy.py  nfregex.py  porthijack.py  system.py
tests/: conftest.py  test_client.py  test_config.py  test_models.py  test_tools.py
